[add] created EtipoUsuario enum and added roles in usuario